// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicWarning: Component should render correctly 1`] = `
<div
  className="sc-AxjAm StDqN"
/>
`;

exports[`PublicWarning: Component should render correctly with multiple types 1`] = `
<div
  className="sc-AxjAm StDqN"
>
  <div
    className="sc-fzozJi cKrXJI"
  >
    <div
      className="sc-fzoLsD iygLtp"
    >
      <svg
        clipRule="evenodd"
        fillRule="evenodd"
        style={
          Object {
            "fill": "#FFF",
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12 0c6.623 0 12 5.377 12 12s-5.377 12-12 12S0 18.623 0 12 5.377 0 12 0zm0 1c6.071 0 11 4.929 11 11s-4.929 11-11 11S1 18.071 1 12 5.929 1 12 1zm.5 17h-1V9h1v9zM12 6a.845.845 0 110 1.69A.845.845 0 0112 6z"
        />
      </svg>
    </div>
    Notice: images & files uploaded are available publicly.
  </div>
</div>
`;

exports[`PublicWarning: Component should render correctly with time image 1`] = `
<div
  className="sc-AxjAm StDqN"
>
  <div
    className="sc-fzozJi cKrXJI"
  >
    <div
      className="sc-fzoLsD iygLtp"
    >
      <svg
        clipRule="evenodd"
        fillRule="evenodd"
        style={
          Object {
            "fill": "#FFF",
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12 0c6.623 0 12 5.377 12 12s-5.377 12-12 12S0 18.623 0 12 5.377 0 12 0zm0 1c6.071 0 11 4.929 11 11s-4.929 11-11 11S1 18.071 1 12 5.929 1 12 1zm.5 17h-1V9h1v9zM12 6a.845.845 0 110 1.69A.845.845 0 0112 6z"
        />
      </svg>
    </div>
    Notice: Images uploaded are available publicly.
  </div>
</div>
`;

exports[`PublicWarning: Component should render correctly with type file 1`] = `
<div
  className="sc-AxjAm StDqN"
>
  <div
    className="sc-fzozJi cKrXJI"
  >
    <div
      className="sc-fzoLsD iygLtp"
    >
      <svg
        clipRule="evenodd"
        fillRule="evenodd"
        style={
          Object {
            "fill": "#FFF",
            "height": "20px",
            "width": "20px",
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M12 0c6.623 0 12 5.377 12 12s-5.377 12-12 12S0 18.623 0 12 5.377 0 12 0zm0 1c6.071 0 11 4.929 11 11s-4.929 11-11 11S1 18.071 1 12 5.929 1 12 1zm.5 17h-1V9h1v9zM12 6a.845.845 0 110 1.69A.845.845 0 0112 6z"
        />
      </svg>
    </div>
    Notice: Files uploaded are available publicly.
  </div>
</div>
`;
